Mise à jour du site avec la nouvelle vidéo

--- a/films/crek1.html
+++ b/films/crek1.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Regarder Qezbul 1 - Film Kabyle Complet en Streaming HD | Amazigh TV</title>
-  <meta name="description" content="Regarder Qezbul 1 en streaming HD gratuit. Film comédie kabyle complet de 83 minutes. Aventures déjantées de Qezbul et son équipe.">
-  <meta property="og:title" content="Qezbul 1 - Film Kabyle Complet Gratuit | Amazigh TV">
-  <meta property="og:description" content="Film comédie kabyle Qezbul 1 en streaming HD. Durée: 83 min. Genre: Comédie.">
-  <meta property="og:image" content="../images/qezbul 1.jpg">
-  <meta property="og:url" content="https://amazigh-tv.vercel.app/films/qezbul1.html">
+  <title>Regarder Crek 1 - Film Kabyle Fantastique en Streaming HD | Amazigh TV</title>
+  <meta name="description" content="Regarder Crek 1 en streaming HD gratuit. Film fantastique kabyle complet de 127 minutes. Aventure magique en terre Amazigh.">
+  <meta property="og:title" content="Crek 1 - Film Kabyle Fantastique Gratuit | Amazigh TV">
+  <meta property="og:description" content="Film fantastique et comique kabyle Crek 1 en streaming HD. Durée: 77 min. Genre: Fantastique.">
+  <meta property="og:image" content="../images/crek1.jpg">
+  <meta property="og:url" content="https://amazigh-tv.vercel.app/films/crek1.html">
   <meta property="og:type" content="video.movie">
 
-  <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, pucci, qezbul, li mucucu">
+  <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, narnia 1, crek1, pucci, qezbul, li mucucu">
   <meta name="author" content="Amazigh TV">
 
-  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/qezbul1.html">
+
+  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/crek1.html">
   <link rel="stylesheet" href="../style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="../images/logo-32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="../images/logo-180.png">
@@ -38,7 +39,7 @@
         position: relative; 
         min-height: 60vh;
         background: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.9)), 
-                    url('../images/qezbul 1.jpg') center center/cover no-repeat;
+                    url('../images/crek1.jpg') center center/cover no-repeat;
         display: flex; 
         align-items: center; 
         padding: 120px 40px 60px;
@@ -271,18 +272,18 @@
   <section class="film-page-hero">
     <div class="film-details-container">
         <div class="film-poster-large">
-            <img src="../images/qezbul 1.jpg" alt="Affiche du film Qezbul 1 - Film comédie kabyle">
+            <img src="../images/crek1.jpg" alt="Affiche du film Crek 1 - Film fantastique et comeédie en kabyle">
         </div>
         <div class="film-info-main">
-            <h1>Qezbul 1</h1>
+            <h1>Crek 1</h1>
             <div class="metadata">
-                <span><i class="fas fa-tags"></i> Comédie</span>
-                <span><i class="fas fa-clock"></i> 83 min</span>
+                <span><i class="fas fa-tags"></i> Fantastique</span>
+                <span><i class="fas fa-clock"></i> 127 min</span>
                 <span><i class="fas fa-star"></i> 4.5/5</span>
                 <span><i class="fas fa-eye"></i> HD</span>
             </div>
-            <p class="description">Qezbul, un panda maladroit passionné de kung-fu, travaille dans le restaurant de nouilles de son père. Par un concours de circonstances, il est désigné comme l'Élu censé sauver la vallée. Entraîné malgré lui aux côtés des Cinq Cyclones par le maître Shifu, il devra prouver sa valeur pour affronter le redoutable méchant. Contre toute attente, Qezbul découvre que sa vraie force vient de ce qu’il est vraiment.</p>
-            <button class="hero-play-button" data-video-id="video-qezbul1">
+            <p class="description">Crek, un ogre solitaire, voit son marais envahi par des créatures féeriques exilées par le tyrannique Farqou3a. Pour récupérer son calme, il accepte de sauver la princesse Selyuna, promise à Farqou3a. Mais au fil de l’aventure, Crek découvre l’amitié, l’amour et que la véritable beauté vient de l’intérieur.</p>
+            <button class="hero-play-button" data-video-id="video-crek1">
                 <i class="fas fa-play play-icon"></i> LANCER LE FILM
             </button>
         </div>
@@ -290,26 +291,27 @@
   </section>
 
   <section class="video-section">
-    <h3>Regarder Qezbul 1 en Streaming HD</h3>
+    <h3>Regarder Crek 1 en Streaming HD</h3>
     <div class="video-responsive-container">
-        <div id="video-play-overlay">
-            <i class="fas fa-play play-icon-lg"></i>
-        </div>
-        <iframe id="video-iframe-player" src="" frameborder="0" allow="autoplay; fullscreen" allowfullscreen title="Lecteur vidéo pour le film Qezbul 1"></iframe>
-        <div class="video-loading" id="video-loading-player" style="display: none;">
-            <i class="fas fa-spinner fa-spin loading-pulse"></i>
-            <p>Chargement de la vidéo...</p>
-        </div>
+    <div id="video-play-overlay">
+        <i class="fas fa-play play-icon-lg"></i>
     </div>
+    <iframe id="video-iframe-player" src="" allow="autoplay; fullscreen" allowfullscreen title="Lecteur vidéo Crek 1"></iframe>
+    <div class="video-loading" id="video-loading-player" style="display: none;">
+        <i class="fas fa-spinner fa-spin loading-pulse"></i>
+        <p>Chargement de la vidéo...</p>
+    </div>
+</div>
+
   </section>
   
   <section class="film-list-section suggested-films">
     <h3>Films Kabyles Similaires</h3>
     <div class="film-grid">
-        <a href="pucci1.html" class="film-card">
+        <a href="qezbul1.html" class="film-card">
             <article>
-                <div class="film-poster"><img src="../images/pucci1.jpg" alt="Pucci 1 - Film comédie kabyle" loading="lazy"></div>
-                <div class="film-info"><h4>Pucci 1</h4><p>Comédie, 80 min</p></div>
+                <div class="film-poster"><img src="../images/qezbul 1.jpg" alt="Qezbul 1 - Film comédie kabyle" loading="lazy"></div>
+                <div class="film-info"><h4>Qezbul 1</h4><p>Comédie, 83 min</p></div>
             </article>
         </a>
         <a href="pucci2.html" class="film-card">
@@ -337,16 +339,16 @@
   {
     "@context": "https://schema.org",
     "@type": "Movie",
-    "name": "Qezbul 1",
-    "description": "Film comédie kabyle Qezbul 1 - Aventures déjantées de Qezbul et son équipe",
-    "image": "https://amazigh-tv.vercel.app/images/qezbul 1.jpg",
-    "duration": "PT83M",
-    "genre": "Comedy",
-    "datePublished": "2023",
+    "name": "Crek 1",
+    "description": "Film fantastique Comédie kabyle Crek 1 - Film animation en kabyle",
+    "image": "https://amazigh-tv.vercel.app/images/crek1.jpg",
+    "duration": "PT127M",
+    "genre": "Fantasy, Comédie",
+    "datePublished": "2001",
     "actor": [
       {
         "@type": "Person",
-        "name": "Qezbul"
+        "name": "Acteurs Kabyles"
       }
     ]
   }
@@ -363,52 +365,60 @@
 <script>
 document.addEventListener('DOMContentLoaded', () => {
     const playButton = document.querySelector('.hero-play-button');
+    const playOverlay = document.getElementById('video-play-overlay');
     const videoIframe = document.getElementById('video-iframe-player');
     const videoLoading = document.getElementById('video-loading-player');
-    const playOverlay = document.getElementById('video-play-overlay');
 
+    // Lien de la vidéo
     const videoData = {
-        'video-qezbul1': { 
-            link: 'https://streamtape.com/e/QbgypGOLYAH99m'
+        'video-crek1': { 
+            link: 'https://streamtape.com/e/P9avZje4apT0apz'
         }
     };
-    
+
     function launchVideo() {
         const videoId = playButton.dataset.videoId;
         const videoInfo = videoData[videoId];
 
-        if (videoInfo) {
-            playOverlay.style.display = 'none';
-            videoLoading.style.display = 'flex';
-            videoIframe.style.display = 'none';
-            videoIframe.src = videoInfo.link;
-
-            document.querySelector('.video-section').scrollIntoView({
-                behavior: 'smooth',
-                block: 'center'
-            });
-
-            videoIframe.onload = () => {
-                videoLoading.style.display = 'none';
-                videoIframe.style.display = 'block';
-            };
-
-            videoIframe.onerror = () => {
-                videoLoading.innerHTML = `
-                    <i class="fas fa-exclamation-triangle"></i>
-                    <p>Erreur de chargement de la vidéo</p>
-                    <button onclick="location.reload()" class="cta-button">Réessayer</button>
-                `;
-            };
-        } else {
+        if (!videoInfo) {
             alert('Vidéo non disponible pour le moment.');
+            return;
         }
+
+        // Préparation
+        playOverlay.style.display = 'none';
+        videoLoading.style.display = 'flex';
+        videoIframe.style.display = 'none';
+        videoIframe.src = videoInfo.link;
+
+        // Scroll vers la vidéo
+        document.querySelector('.video-section').scrollIntoView({
+            behavior: 'smooth',
+            block: 'center'
+        });
+
+        // Quand la vidéo est prête
+        videoIframe.onload = () => {
+            videoLoading.style.display = 'none';
+            videoIframe.style.display = 'block';
+        };
+
+        // Gestion des erreurs
+        videoIframe.onerror = () => {
+            videoLoading.innerHTML = `
+                <i class="fas fa-exclamation-triangle"></i>
+                <p>Erreur de chargement de la vidéo</p>
+                <button onclick="location.reload()" class="cta-button">Réessayer</button>
+            `;
+        };
     }
 
+    // Événements
     playButton.addEventListener('click', launchVideo);
     playOverlay.addEventListener('click', launchVideo);
 });
 </script>
+>
 <script type='text/javascript' src='//pl27872732.effectivegatecpm.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
 
 </body>
