--- a/films/narnia1.html
+++ b/films/narnia1.html
@@ -282,7 +282,7 @@
                 <span><i class="fas fa-star"></i> 4.5/5</span>
                 <span><i class="fas fa-eye"></i> HD</span>
             </div>
-            <p class="description">Plongez dans l'univers magique de Narnia adapté en kabyle ! Quatre enfants découvrent un monde enchanté peuplé de créatures mythiques et luttent contre la Sorcière Blanche pour restaurer l'équilibre.</p>
+            <p class="description">En pleine Seconde Guerre mondiale, quatre enfants sont envoyés à la campagne pour échapper aux bombardements. En explorant une mystérieuse armoire, ils découvrent Narnia, un monde magique peuplé de créatures fantastiques. Mais Narnia est plongé dans un hiver éternel sous le règne de la Sorcière blanche. Guidés par le lion Aslan, les enfants vont devoir mener une bataille épique pour libérer ce royaume enchanté.</p>
             <button class="hero-play-button" data-video-id="video-narnia1">
                 <i class="fas fa-play play-icon"></i> LANCER LE FILM
             </button>
