--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -280,7 +280,7 @@
                 <span><i class="fas fa-star"></i> 4.5/5</span>
                 <span><i class="fas fa-eye"></i> HD</span>
             </div>
-            <p class="description">Le premier volet de la série culte Pucci ! Suivez les aventures hilarantes de Pucci et ses amis à travers Tizi Ouzou dans cette comédie devenue un incontournable du cinéma Amazigh. Rires garantis !</p>
+            <p class="description">À l’époque glaciaire, un mammouth solitaire nommé Manny, un paresseux maladroit appelé pucci, et un tigre à dents de sabre rusé nommé zenghouf se retrouvent à devoir ramener un bébé humain perdu à sa tribu. Malgré leurs différences, ce trio improbable traverse un monde gelé semé d’embûches et finit par former une véritable petite famille.</p>
             <button class="hero-play-button" data-video-id="video-pucci1">
                 <i class="fas fa-play play-icon"></i> LANCER LE FILM
             </button>
