--- a/films/pucci4.html
+++ b/films/pucci4.html
@@ -280,7 +280,7 @@
                 <span><i class="fas fa-star"></i> 4.5/5</span>
                 <span><i class="fas fa-eye"></i> HD</span>
             </div>
-            <p class="description">Pucci revient pour une quatrième aventure encore plus folle ! Dans ce nouveau volet, notre héros et ses amis se lancent dans des situations comiques inédites qui vous feront rire aux éclats.</p>
+            <p class="description">À cause de weskiki et sa quête obsessionnelle du gland, les continents se séparent. Manny, Zenghouf et pucci se retrouvent à la dérive sur un iceberg, séparés du reste du groupe. Pour retrouver leur famille, ils devront affronter des pirates, des tempêtes et traverser un océan de dangers.</p>
             <button class="hero-play-button" data-video-id="video-pucci4">
                 <i class="fas fa-play play-icon"></i> LANCER LE FILM
             </button>
