--- a/index.html
+++ b/index.html
@@ -117,6 +117,19 @@
     <h3>Films en Vedette</h3>
     <div class="film-grid">
 
+        <a href="films/crek1.html" class="film-card">
+          <article>
+            <div class="film-poster">
+              <img src="images/crek1.jpg" alt="narnia 1 - Film Fantastique Comédie Kabyle" loading="lazy">
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+            </div>
+            <div class="film-info">
+              <h4>Crek 1</h4>
+              <p>Comédie, Come 127 min</p>
+            </div>
+          </article>
+        </a>
+
       <a href="films/narnia1.html" class="film-card">
         <article>
           <div class="film-poster">
