--- a/films/crek1.html
+++ b/films/crek1.html
@@ -471,8 +471,7 @@ document.addEventListener('DOMContentLoaded', () => {
     if (playOverlay) playOverlay.addEventListener('click', launchVideo);
 });
 </script>
->
-<script type='text/javascript' src='//pl27872732.effectivegatecpm.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
 
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
 </body>
 </html>
