--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -471,6 +471,6 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
-<script type='text/javascript' src='//pl27872732.effectivegatecpm.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script><script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
 </body>
 </html>
