--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -384,7 +384,7 @@
 document.addEventListener('DOMContentLoaded', () => {
 
     const videoLinks = {
-        'dood': 'https://dsvplay.com/e/85k2fxhne70q', 
+        'dood': 'https://dsvplay.com/e/za8jrxvpw6rq', 
         // IMPORTANT : utiliser l'embed /e/ pour Streamtape
         'streamtape': 'https://streamtape.com/e/QbgypGOLYAH99m' 
     };
