--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', function() {
-    navigator.serviceWorker.register('./sw.js')
+    navigator.serviceWorker.register('/sw.js')
       .then(function(registration) {
         console.log('PWA activée !');
       })
