Mise à jour du site avec la nouvelle vidéo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     gtag('js', new Date());
     gtag('config', 'G-2L50HTQ2Z6');
   </script>
-
+<meta name="monetag" content="5323556ebf10099f2e568a42fc411fcf">
   <style>
     /* Styles additionnels pour le logo dans le header */
     .logo-container {
