--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -480,7 +480,7 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
+<script src="https://fpyf8.com/88/tag.min.js" data-zone="179247" async data-cfasync="false"></script>
 
 </body>
 </html>
