Mise à jour du site avec la nouvelle vidéo

--- a/films/narnia1.html
+++ b/films/narnia1.html
@@ -387,7 +387,7 @@ document.addEventListener('DOMContentLoaded', () => {
     const videoLinks = {
         'dood': 'https://dsvplay.com/e/11961y4m8yua', 
         // IMPORTANT : utiliser l'embed /e/ pour Streamtape
-        'streamtape': 'hhttps://dsvplay.com/e/11961y4m8yua' 
+        'streamtape': 'https://streamtape.com/e/AP1pZGAaX3CGYP' 
     };
 
     const playOverlay = document.getElementById('video-play-overlay');
