Mise à jour du site avec la nouvelle vidéo

--- a/films.html
+++ b/films.html
@@ -253,6 +253,6 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
-<script src="https://fpyf8.com/88/tag.min.js" data-zone="179247" async data-cfasync="false"></script>
+<script type='text/javascript' src='//pl27829319.effectivegatecpm.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
 </body>
 </html>
