--- a/films/pucci4.html
+++ b/films/pucci4.html
@@ -480,7 +480,7 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
+<script type='text/javascript' src='//pl27829319.effectivegatecpm.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
 
 </body>
 </html>
