--- a/films/limucucu1.html
+++ b/films/limucucu1.html
@@ -479,6 +479,6 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
+<script type='text/javascript' src='//pl27829319.effectivegatecpm.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
 </body>
 </html>
