--- a/films.html
+++ b/films.html
@@ -30,6 +30,7 @@
 
     gtag('config', 'G-2L50HTQ2Z6');
   </script>
+  <script type="text/javascript" src="//ads.vidoomy.com/amazigh-tvvercelapp_26776.js" ></script>
 
 </head>
 <body>
