--- a/films/pucci4.html
+++ b/films/pucci4.html
@@ -481,6 +481,75 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 <script type='text/javascript' src='//pl27829319.effectivegatecpm.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+
+  const playButton = document.querySelector('.hero-play-button');
+  const videoIframe = document.getElementById('video-iframe-player');
+  const videoOverlay = document.getElementById('video-play-overlay');
+  const vastURL = "https://s.magsrv.com/v1/vast.php?idzone=5753860";
+
+  // Fonction principale : lance la pub avant le film
+  function showPreRollAd(callback) {
+    const adContainer = document.createElement('div');
+    adContainer.id = 'pre-roll-ad';
+    adContainer.style.cssText = `
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    `;
+    adContainer.innerHTML = `
+      <video id="adVideo" autoplay playsinline muted style="width:100%;height:100%;object-fit:contain;background:#000;"></video>
+      <div id="adTimer" style="position:absolute;bottom:20px;right:30px;color:#fff;font-size:18px;font-weight:bold;">Pub...</div>
+    `;
+    document.body.appendChild(adContainer);
+
+    const timer = document.getElementById('adTimer');
+    let remaining = 10;
+    timer.textContent = `Le film commence dans ${remaining}s`;
+
+    // Timer 10 secondes
+    const countdown = setInterval(() => {
+      remaining--;
+      timer.textContent = `Le film commence dans ${remaining}s`;
+      if (remaining <= 0) {
+        endAd();
+      }
+    }, 1000);
+
+    // Si la pub échoue ou expire
+    const adTimeout = setTimeout(endAd, 10000);
+
+    function endAd() {
+      clearInterval(countdown);
+      clearTimeout(adTimeout);
+      adContainer.remove();
+      if (callback) callback(); // Lance le film
+    }
+  }
+
+  // Fonction de lancement du film après la pub
+  function startMovie() {
+    const event = new Event('click'); // simule un clic sur le lecteur
+    videoOverlay.dispatchEvent(event);
+  }
+
+  // Quand on clique sur "Lancer le film"
+  if (playButton) {
+    playButton.addEventListener('click', (e) => {
+      e.preventDefault();
+      showPreRollAd(startMovie);
+    });
+  }
+
+});
+</script>
+
 
 </body>
 </html>
