Ajout fichier ads.txt sans conversion CRLF

--- a/films/crek1.html
+++ b/films/crek1.html
@@ -415,7 +415,7 @@
 document.addEventListener('DOMContentLoaded', () => {
 
     // === URL DE VOTRE PUBLICITÉ ===
-    const VAST_AD_TAG_URL = 'https://s.magsrv.com/v1/vast.php?idzone=5753860';
+   const VAST_AD_TAG_URL = 'https://storage.googleapis.com/interactive-media-ads/ad-tags/simple.xml';
 
     // === LIENS DES LECTEURS DE FILM ===
     const videoLinks = {
