Ajout fichier ads.txt sans conversion CRLF

--- a/films/crek1.html
+++ b/films/crek1.html
@@ -524,7 +524,7 @@ document.addEventListener('DOMContentLoaded', () => {
         // Configure le plugin IMA
         const imaOptions = {
             adTagUrl: VAST_AD_TAG_URL,
-            // debug: true // Décommentez pour voir les logs de Google IMA
+             debug: true // Décommentez pour voir les logs de Google IMA
         };
 
         adPlayer.ima(imaOptions);
