--- a/films.html
+++ b/films.html
@@ -87,6 +87,19 @@
 
     <div class="film-grid">
 
+      <a href="films/qiqi1.html" class="film-card">
+          <article>
+            <div class="film-poster">
+              <img src="images/qiqi1.jpg" alt="Qiqi bu lemraqi 1 - Film comédie Kabyle" loading="lazy">
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+            </div>
+            <div class="film-info">
+              <h4>Qiqi Bu Lemraqi 1</h4>
+              <p>Comédie, 75 min</p>
+            </div>
+          </article>
+        </a>
+        
         <a href="films/crek1.html" class="film-card">
           <article>
             <div class="film-poster">
