--- a/films/qiqi1.html
+++ b/films/qiqi1.html
@@ -384,7 +384,7 @@
 document.addEventListener('DOMContentLoaded', () => {
 
     const videoLinks = {
-        'dood': 'https://dsvplay.com/e/efqqry59eit5', 
+        'dood': 'https://dsvplay.com/e/my28v33gfchu', 
         // IMPORTANT : utiliser l'embed /e/ pour Streamtape
         'streamtape': 'https://streamtape.com/e/JYm93KBoPYIjM7J' 
     };
@@ -479,7 +479,6 @@ document.addEventListener('DOMContentLoaded', () => {
 
 });
 </script>
-
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
 </body>
 </html>
