--- a/index.html
+++ b/index.html
@@ -118,6 +118,20 @@
     <h3>Films en Vedette</h3>
     <div class="film-grid">
 
+      <a href="films/qiqi1.html" class="film-card">
+          <article>
+            <div class="film-poster">
+              <img src="images/qiqi1.jpg" alt="Qiqi bu lemraqi 1 - Film comédie Kabyle" loading="lazy">
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+            </div>
+            <div class="film-info">
+              <h4>Qiqi Bu Lemraqi 1</h4>
+              <p>Comédie, 75 min</p>
+            </div>
+          </article>
+        </a>
+        
+
         <a href="films/crek1.html" class="film-card">
           <article>
             <div class="film-poster">
@@ -171,7 +185,7 @@
   <section style="padding: 60px 40px; background: var(--color-card-bg); margin: 50px 0;">
     <div class="visitor-stats-container">
       <div class="stat-item">
-        <div class="stat-number">8+</div>
+        <div class="stat-number">10+</div>
         <div class="stat-label">Films</div>
       </div>
       <div class="stat-item">
