Ajout fichier ads.txt sans conversion CRLF

--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -386,9 +386,9 @@
 document.addEventListener('DOMContentLoaded', () => {
 
     const videoLinks = {
-        'dood': 'https://dsvplay.com/e/85k2fxhne70q', 
+        'dood': 'https://dsvplay.com/e/efqqry59eit5', 
         // IMPORTANT : utiliser l'embed /e/ pour Streamtape
-        'streamtape': 'https://streamtape.com/e/jjo9qGYWaRuzAD2' 
+        'streamtape': 'https://streamtape.com/e/JYm93KBoPYIjM7J' 
     };
 
     const playOverlay = document.getElementById('video-play-overlay');
