--- a/films.html
+++ b/films.html
@@ -86,6 +86,19 @@
 <!-- FIN BARRE DE RECHERCHE -->
 
     <div class="film-grid">
+      <a href="films/kiki1.html" class="film-card">
+          <article>
+            <div class="film-poster">
+              <img src="images/kiki1.jpg" alt="kiki 1 - Film comédie Kabyle" loading="lazy">
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+            </div>
+            <div class="film-info">
+              <h4>Kiki 1</h4>
+              <p>Comédie, 75 min</p>
+            </div>
+          </article>
+        </a>
+        
 
       <a href="films/qiqi1.html" class="film-card">
           <article>
