Ajout fichier ads.txt sans conversion CRLF

--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -21,8 +21,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1yOQ/Lp02H1lq1+8YcR/Wk80zL0c/s11D4n5bJkU5l0O7tY5U/PzG0h1O1h5zO7Wk5vA7r5/j4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" sizes="32x32" href="../images/logo-32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="../images/logo-180.png">
+
   
-  
+  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/kiki1.html" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
