--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Regarder Pucci 1 - Film Kabyle Complet en Streaming HD | Amazigh TV</title>
+
+  
   <meta name="description" content="Regarder Pucci 1 en streaming HD gratuit. Film comédie kabyle complet de 80 minutes. Aventures hilarantes de Pucci et ses amis.">
   <meta property="og:title" content="Pucci 1 - Film Kabyle Complet Gratuit | Amazigh TV">
   <meta property="og:description" content="Film comédie kabyle Pucci 1 en streaming HD. Durée: 80 min. Genre: Comédie.">
@@ -13,7 +15,7 @@
   <meta property="og:type" content="video.movie">
   <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, pucci1, qezbul, li mucucu">
   <meta name="author" content="Amazigh TV">
-
+  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/pucci1.html" />
   <link rel="canonical" href="https://amazigh-tv.vercel.app/films/pucci1.html">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1yOQ/Lp02H1lq1+8YcR/Wk80zL0c/s11D4n5bJkU5l0O7tY5U/PzG0h1O1h5zO7Wk5vA7r5/j4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
