--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="/images/og-image.jpg">
   
+  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/index.html" />
   <link rel="stylesheet" href="style.css">
   <!-- Favicon navigateur -->
   <link rel="icon" type="image/png" sizes="32x32" href="/images/logo-32.png">
