Ajout fichier ads.txt sans conversion CRLF

--- a/films/narnia2.html
+++ b/films/narnia2.html
@@ -386,9 +386,9 @@
 document.addEventListener('DOMContentLoaded', () => {
 
     const videoLinks = {
-        'dood': 'https://dsvplay.com/e/2mi71p1yjehy', 
+        'dood': 'https://dsvplay.com/e/buznbfpy66my', 
         // IMPORTANT : utiliser l'embed /e/ pour Streamtape
-        'streamtape': 'https://streamtape.com/e/P9avZje4apT0apz' 
+        'streamtape': '' 
     };
 
     const playOverlay = document.getElementById('video-play-overlay');
