--- a/films/pucci2.html
+++ b/films/pucci2.html
@@ -386,9 +386,9 @@
 document.addEventListener('DOMContentLoaded', () => {
 
     const videoLinks = {
-        'dood': 'https://dsvplay.com/e/efqqry59eit5', 
+        'dood': 'https://dsvplay.com/e/911e5e3ip8cz', 
         // IMPORTANT : utiliser l'embed /e/ pour Streamtape
-        'streamtape': 'https://streamtape.com/e/JYm93KBoPYIjM7J' 
+        'streamtape': '' 
     };
 
     const playOverlay = document.getElementById('video-play-overlay');
