--- a/films.html
+++ b/films.html
@@ -86,7 +86,23 @@
 </div>
 <!-- FIN BARRE DE RECHERCHE -->
 
+
     <div class="film-grid">
+
+      
+        <a href="films/narnia2.html" class="film-card">
+          <article>
+            <div class="film-poster">
+              <img src="images/narnia2.jpg" alt="narnia 2 - Film Fantastique Kabyle" loading="lazy">
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+            </div>
+            <div class="film-info">
+              <h4>Narnia 2</h4>
+              <p>Fantastique, 127 min</p>
+            </div>
+          </article>
+        </a>
+
       <a href="films/kiki1.html" class="film-card">
           <article>
             <div class="film-poster">
