Ajout fichier ads.txt sans conversion CRLF

--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
   <meta property="og:description" content="Films et courts métrages Kabyles en HD. Pucci, Qezbul et bien d'autres.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="/images/og-image.jpg">
+  <!-- Open Graph pour le logo -->
+<meta property="og:image" content="https://amazigh-tv.vercel.app/images/logo-512.png">
+<meta property="og:image:width" content="512">
+<meta property="og:image:height" content="512">
+<meta property="og:image:alt" content="Amazigh TV - Logo">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Amazigh TV">
+
+<!-- Twitter Card -->
+<meta name="twitter:image" content="https://amazigh-tv.vercel.app/images/logo-512.png">
+<meta name="twitter:card" content="summary_large_image">
+
+<!-- Schema.org Organization avec logo -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization", 
+  "name": "Amazigh TV",
+  "url": "https://amazigh-tv.vercel.app",
+  "logo": "https://amazigh-tv.vercel.app/images/logo-512.png",
+  "description": "Films et courts métrages Kabyles en streaming gratuit",
+  "sameAs": []
+}
+</script>
   
   <link rel="canonical" href="https://amazigh-tv.vercel.app/films/index.html" />
   <link rel="stylesheet" href="style.css">
