--- a/films/crek1.html
+++ b/films/crek1.html
@@ -327,10 +327,15 @@
 
 
 
-<!-- Bloc Native Ads Adsterra -->
+
+<!-- === ADSTERRA NATIVE BANNER === -->
 <div style="text-align:center; margin:30px 0;">
-  <script async type="text/javascript" src="//YOUR_NATIVE_BANNER_CODE.js"></script>
+  <script async="async" data-cfasync="false" src="//imbueprescriptionhumiliation.com/932dda4fc02a806bb59c2f6d19cefe46/invoke.js"></script>
+  <div id="container-932dda4fc02a806bb59c2f6d19cefe46"></div>
 </div>
+<!-- === /ADSTERRA NATIVE BANNER === -->
+
+<section class="film-list-section suggested-films">
 
 
   
@@ -493,13 +498,13 @@ document.addEventListener('DOMContentLoaded', () => {
 
 <script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
 
-<script type="text/javascript" src="//YOUR_SOCIALBAR_CODE.js"></script>
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
 
 <!-- === ADSTERRA SMARTLINK SCRIPT === -->
 <script>
 document.addEventListener('DOMContentLoaded', function() {
     const playButton = document.querySelector('.hero-play-button');
-    const SMARTLINK_URL = 'https://www.adsterralink.com/your_smartlink_id'; // 🔥 remplace par ton lien Adsterra
+    const SMARTLINK_URL = 'https://imbueprescriptionhumiliation.com/ijcn0tcyjj?key=cc5f2bbcbb55b25a23202ca173f6a468'; // 🔥 remplace par ton lien Adsterra
     
     function launchVideo() {
         try {
