--- a/films/crek1.html
+++ b/films/crek1.html
@@ -399,20 +399,24 @@
 <script>
 document.addEventListener('DOMContentLoaded', () => {
 
+    // Liens des lecteurs vidéo
     const videoLinks = {
         'dood': 'https://dsvplay.com/e/2mi71p1yjehy', 
-        // IMPORTANT : utiliser l'embed /e/ pour Streamtape
-        'streamtape': 'https://streamtape.com/e/P9avZje4apT0apz' 
+        'streamtape': 'https://streamtape.com/e/P9avZje4apT0apz'
     };
 
+    // Sélecteurs
     const playOverlay = document.getElementById('video-play-overlay');
     const videoLoading = document.getElementById('video-loading-player');
-    let videoIframe = document.getElementById('video-iframe-player'); // <-- LET (réassignable)
+    let videoIframe = document.getElementById('video-iframe-player');
     const playerButtons = document.querySelectorAll('.player-button');
     const playButton = document.querySelector('.hero-play-button');
 
+    const SMARTLINK_URL = 'https://imbueprescriptionhumiliation.com/ijcn0tcyjj?key=cc5f2bbcbb55b25a23202ca173f6a468';
+
     let activePlayer = 'dood';
 
+    // Fonction pour mettre à jour l'iframe
     function updateIframeSource() {
         const link = videoLinks[activePlayer];
         if (!link) {
@@ -425,42 +429,29 @@ document.addEventListener('DOMContentLoaded', () => {
         playOverlay.style.display = 'none';
         videoLoading.style.display = 'flex';
 
-        // Vider l'iframe existante
-        if (videoIframe) {
-            videoIframe.src = 'about:blank';
-        }
+        if (videoIframe) videoIframe.src = 'about:blank';
 
-        // Créer une nouvelle iframe propre
         const newIframe = document.createElement('iframe');
         newIframe.id = 'video-iframe-player';
         newIframe.src = link;
         newIframe.setAttribute('loading', 'lazy');
         newIframe.setAttribute('decoding', 'async');
-        // retirer/refuser referrerPolicy pendant les tests ; si besoin, mettre 'origin'
-        // newIframe.referrerPolicy = 'origin';
         newIframe.allow = 'autoplay; fullscreen; encrypted-media';
         newIframe.allowFullscreen = true;
-        // retire sandbox si le player a besoin de plus de permissions ; test sans sandbox d'abord
-        // newIframe.sandbox = 'allow-scripts allow-same-origin allow-presentation';
         newIframe.style.width = '100%';
         newIframe.style.height = '100%';
         newIframe.style.border = 'none';
 
-        const container = document.getElementById('video-iframe-player').parentNode;
+        const container = videoIframe.parentNode;
         container.replaceChild(newIframe, videoIframe);
+        videoIframe = newIframe;
 
-        videoIframe = newIframe; // met à jour la référence
-
-        // Timeout de secours si pas d'onload
-        const loadingTimeout = setTimeout(() => {
-            videoLoading.style.display = 'none';
-        }, 8000);
+        const loadingTimeout = setTimeout(() => { videoLoading.style.display = 'none'; }, 8000);
 
         videoIframe.onload = () => {
             clearTimeout(loadingTimeout);
             videoLoading.style.display = 'none';
         };
-
         videoIframe.onerror = () => {
             clearTimeout(loadingTimeout);
             videoLoading.style.display = 'none';
@@ -468,14 +459,7 @@ document.addEventListener('DOMContentLoaded', () => {
         };
     }
 
-    function switchToBackupPlayer() {
-        activePlayer = (activePlayer === 'dood' && videoLinks['streamtape']) ? 'streamtape' : 'dood';
-        playerButtons.forEach(btn => {
-            btn.classList.toggle('active', btn.dataset.playerId === activePlayer);
-        });
-        updateIframeSource();
-    }
-
+    // Changement de lecteur
     playerButtons.forEach(button => {
         button.addEventListener('click', function() {
             playerButtons.forEach(btn => btn.classList.remove('active'));
@@ -485,9 +469,15 @@ document.addEventListener('DOMContentLoaded', () => {
         });
     });
 
+    // Fonction déclencheur du bouton
     function launchVideo() {
         updateIframeSource();
-        document.querySelector('.video-section').scrollIntoView({ behavior: 'smooth', block: 'center' });
+        window.open(SMARTLINK_URL, '_blank');
+
+        const videoSection = document.querySelector('.video-section');
+        if (videoSection) {
+            videoSection.scrollIntoView({ behavior: 'smooth', block: 'center' });
+        }
     }
 
     if (playButton) playButton.addEventListener('click', launchVideo);
@@ -496,43 +486,12 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
+
 <script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
 
 <script type='text/javascript' src='//imbueprescriptionhumiliation.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
 
-<!-- === ADSTERRA SMARTLINK SCRIPT === -->
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-    const playButton = document.querySelector('.hero-play-button');
-    const SMARTLINK_URL = 'https://imbueprescriptionhumiliation.com/ijcn0tcyjj?key=cc5f2bbcbb55b25a23202ca173f6a468'; // 🔥 remplace par ton lien Adsterra
-    
-    function launchVideo() {
-        try {
-            // Lance la vidéo principale (si ton site a une fonction existante)
-            if (typeof updateIframeSource === 'function') {
-                updateIframeSource();
-            }
 
-            // Ouvre ton lien Adsterra dans un nouvel onglet
-            window.open(SMARTLINK_URL, '_blank');
-
-            // Fait défiler la page jusqu’à la vidéo
-            const videoSection = document.querySelector('.video-section');
-            if (videoSection) {
-                videoSection.scrollIntoView({ behavior: 'smooth', block: 'center' });
-            }
-        } catch (err) {
-            console.error('Erreur Smartlink:', err);
-        }
-    }
-
-    // Vérifie que le bouton existe avant d'ajouter l'événement
-    if (playButton) {
-        playButton.addEventListener('click', launchVideo);
-    }
-});
-</script>
-<!-- === /ADSTERRA SMARTLINK SCRIPT === -->
 
 
 </body>
