--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
 </head>
 <body>
 
+   <!-- Overlay Smartlink -->
+<div id="smartlink-overlay" style="
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.8);
+    color: #fff;
+    font-size: 1.5em;
+    text-align: center;
+    padding-top: 40vh;
+    z-index: 9999;
+">
+    Chargement du film...
+</div>
 <header class="header">
   <a href="index.html" class="logo-container">
     <img src="./images/logo-180.png" alt="Logo Amazigh TV" class="logo-image">
@@ -262,6 +277,11 @@
   </script>
 
   <div id="data-check-box" class="data-validator-container block-300x250"></div>
+
+  <div style="text-align:center; margin:30px 0;">
+  <script async="async" data-cfasync="false" src="//imbueprescriptionhumiliation.com/932dda4fc02a806bb59c2f6d19cefe46/invoke.js"></script>
+  <div id="container-932dda4fc02a806bb59c2f6d19cefe46"></div>
+</div>
 </main>
 
 <footer class="footer" id="contact">
@@ -317,6 +337,36 @@
 
 <script src="script.js"></script>
 
-<script type='text/javascript' src='//pl27829319.effectivegatecpm.com/7b/08/4b/7b084b7f5f472bfef5d573b79273878b.js'></script>
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
+
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
+
+<script>
+// REDIRECTION SMARTLINK AVEC OVERLAY
+document.addEventListener('DOMContentLoaded', function() {
+    const smartlinkURL = 'https://imbueprescriptionhumiliation.com/ijcn0tcyjj?key=cc5f2bbcbb55b25a23202ca173f6a468';
+    const filmCards = document.querySelectorAll('.film-card');
+    const overlay = document.getElementById('smartlink-overlay');
+
+    filmCards.forEach(card => {
+        card.addEventListener('click', function(e) {
+            e.preventDefault();
+
+            // Affiche overlay
+            overlay.style.display = 'block';
+
+            // Ouvre le smartlink dans un nouvel onglet
+            window.open(smartlinkURL, '_blank');
+
+            // Redirige vers la page du film après 1,5s
+            const filmURL = card.getAttribute('href');
+            setTimeout(() => {
+                window.location.href = filmURL;
+            }, 1500);
+        });
+    });
+});
+</script>
+
 </body>
 </html>
