Ajout fichier ads.txt sans conversion CRLF

--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -407,7 +407,7 @@ document.addEventListener('DOMContentLoaded', () => {
     const playerButtons = document.querySelectorAll('.player-button');
     const playButton = document.querySelector('.hero-play-button');
 
-    const SMARTLINK_URL = 'https://imbueprescriptionhumiliation.com/ijcn0tcyjj?key=cc5f2bbcbb55b25a23202ca173f6a468';
+    const SMARTLINK_URL = 'https://imbueprescriptionhumiliation.com/ivjv31vgk?key=71142b0293454f148cb2226dc34e248d';
 
     let activePlayer = 'dood';
 
@@ -482,7 +482,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/ee/cb/b5/eecbb51015c12fbfcd22b0006e446933.js'></script>
 
 <script type='text/javascript' src='//imbueprescriptionhumiliation.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
 
