--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 <script>
 // REDIRECTION SMARTLINK AVEC OVERLAY
 document.addEventListener('DOMContentLoaded', function() {
-    const smartlinkURL = 'https://imbueprescriptionhumiliation.com/ijcn0tcyjj?key=cc5f2bbcbb55b25a23202ca173f6a468';
+    const smartlinkURL = 'https://imbueprescriptionhumiliation.com/ivjv31vgk?key=71142b0293454f148cb2226dc34e248d';
     const filmCards = document.querySelectorAll('.film-card');
     const overlay = document.getElementById('smartlink-overlay');
 
