Ajout fichier ads.txt sans conversion CRLF

--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -31,14 +31,15 @@
 
   <script type="text/javascript" src="//ads.vidoomy.com/amazigh-tvvercelapp_26776.js" ></script>
   
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-2L50HTQ2Z6');
-  </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4NKY9G2SBN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-4NKY9G2SBN');
+</script>
   <style>
     .film-page-hero {
         position: relative; 
