Ajout fichier ads.txt sans conversion CRLF

--- a/films/pucci2.html
+++ b/films/pucci2.html
@@ -404,7 +404,7 @@
 </footer>
 
 <script>
-document.addEventListener('DOMContentLoaded', () => {document.addEventListener('DOMContentLoaded', () => {
+document.addEventListener('DOMContentLoaded', () => {
 
     // --- CONFIGURATION ---
     const videoLinks = {
@@ -423,12 +423,12 @@ document.addEventListener('DOMContentLoaded', () => {document.addEventListener('
     let videoIframe = document.getElementById('video-iframe-player');
     const playerButtons = document.querySelectorAll('.player-button');
     const playButton = document.querySelector('.hero-play-button');
-    const playOverlay = document.querySelector('.video-play-overlay'); // CORRECTION: sélecteur de classe
+    const playOverlay = document.querySelector('.video-play-overlay');
 
     let activePlayer = 'dood';
     let adPlayerInstance = null;
     let adPlayed = false;
-    let adPlayerEnded = false; // CORRECTION: déclaré au bon endroit
+    let adPlayerEnded = false;
 
     // --- FONCTION 1: Jouer la publicité VAST ---
     function playPrerollAd() {
@@ -602,7 +602,6 @@ document.addEventListener('DOMContentLoaded', () => {document.addEventListener('
 
 });
 </script>
-
 
 <script type='text/javascript' src='//imbueprescriptionhumiliation.com/ee/cb/b5/eecbb51015c12fbfcd22b0006e446933.js'></script>
 
