--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -334,8 +334,12 @@
         <h4 style="color: #fff; margin-bottom: 15px;">
             <i class="fas fa-ad"></i> Publicité - Le film commence dans quelques secondes
         </h4>
-        <!-- ZONE EXOCLICK - Remplacez VOTRE_ZONE_ID par votre ID Exoclick -->
-        <script type="text/javascript" src="https://s.magsrv.com/v1/vast.php?idzone=5756872"></script>
+        <!-- ZONE EXOCLICK -->
+        <div id="exoclick-ad"></div>
+        <script type="text/javascript">
+            var ad = document.getElementById('exoclick-ad');
+            ad.innerHTML = '<iframe src="https://s.magsrv.com/v1/vast.php?idzone=5756872" width="100%" height="400" frameborder="0" scrolling="no"></iframe>';
+        </script>
         <div style="margin-top: 15px;">
             <button id="skip-ad-btn" class="cta-button" style="background: #666;">
                 <i class="fas fa-forward"></i> Passer la pub (5s)
@@ -343,7 +347,6 @@
         </div>
     </div>
 </div>
-<!-- === /CONTAINER PUB EXOCLICK === -->
 
 <!-- === ADSTERRA NATIVE BANNER === -->
 <div style="text-align:center; margin:30px 0;">
