--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -489,7 +489,7 @@ document.addEventListener('DOMContentLoaded', () => {
     // Fonction déclencheur du bouton
        // Fonction déclencheur du bouton - AVEC PUB EXOCLICK
     function launchVideo() {
-        const SMARTLINK_URL = 'https://imbueprescriptionhumiliation.com/ivjv31vgk?key=71142b0293454f148cb2226dc34e248d';
+        const SMARTLINK_URL = '';
         
         // 1. Ouvrir le smartlink dans nouvel onglet
         window.open(SMARTLINK_URL, '_blank');
@@ -581,9 +581,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/ee/cb/b5/eecbb51015c12fbfcd22b0006e446933.js'></script>
 
-<script type='text/javascript' src='//imbueprescriptionhumiliation.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
 
 
 
