Ajout fichier ads.txt sans conversion CRLF

--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -517,7 +517,7 @@ document.addEventListener('DOMContentLoaded', () => {
         
         // Cacher le lecteur vidéo temporairement
         if (videoContainer) {
-            videoContainer.style.display = 'none';
+            videoContainer.style.display = 'block';
         }
         
         let countdown = 50;
